# TestCapitalComPySe-master

./: .gitignore  conf.py  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: 1_every_day_windows.yml  2_every_day_macos.yml  3_every_day_ubuntu.yml  4_ReTestsAuto_ubuntu.yml  5_ReTestsManual_ubuntu.yml
pages/: base_page.py  build_dynamic_arg.py  captcha.py  common.py  conditions.py  conditions_new.py
pages/AppStore/: app_store.py
pages/BugsManual/: bag_039.py  bug_057.py
pages/Capital/: capital.py  capital_locators.py  trading_instrument_page.py
pages/Education/: The_basics_of_trading.py
pages/Elements/: AppStoreDownloadButton.py  AssertClass.py  BannerButton.py  BuildYourSkillsBlockCreateDemoAccButton.py  ButtonsUnderVideoBanner.py  BuyInTableButton.py  CFDCalculatorBlockTryFreeDemoButton.py  ContentBlockBuyInButton.py  ContentBlockCreateALiveAccountButton.py  ContentBlockCreateARiskFreeDemoAccountButton.py  ContentBlockCreateAccountButton.py  ContentBlockOpenAnAccountButton.py  ContentBlockPractiseForFreeButton.py  ContentBlockSellButton.py  ContentBlockSellBuyButtons.py  ContentBlockTryDemoAccountButton.py  ContentPageStartTradingButton.py  ContentsBlockLearnMoreAboutUsLink.py  CounterBlockButton.py  EmailFieldSignUpForm.py  ExploreOurPlatformBlockEasyToUseLink.py  ExploreOurPlatformBlockTryNowButton.py  FindUsOnTradingviewBannerExploreFeaturesButton.py  ForLearnerTradersBlockSignUpButton.py  ForLearnerTradersBlockTryDemoButton.py  GetInvolvedBannerPracticeForFreeButtonV2.py  (+72 more)
src/: src.py
test_data/: tradingview_site_data.py
tests/: .gitignore
(+88 files in other folders)
